fix argline for JDK 16 unit tests